# small

./: .gitignore  Cargo.toml  README-RUST.md  README.md  config.toml.example  mix.exs
LaunchAgents/: Launch SyncEmAll.plist  com.verknowsys.SyncEmAll.plist
config/: config.exs
lib/: application.ex  clipboard.ex  config.ex  config_agent.ex  database.ex  db.ex  notification.ex  queue.ex  queue_agent.ex  sftp.ex  small.ex  small_application.ex  ssh_supervisor.ex  sync_supervisor.ex  syncemall.ex  timestamp.ex  utils.ex  web_api.ex  web_api_handler.ex
src/: config.rs  database.rs  lib.rs  main.rs  notification.rs  sftp.rs  tests.rs  utils.rs  watcher.rs  webapi.rs
test/: small_test.exs  syncemall_test.exs
