[package]
name = "small-bin"
version = "1.0.0"
edition = "2024"
rust-version = "1.90"
authors = ["Daniel Dettlaff <dmilith@me.com>"]
description = "Sync'eM ALL - File/ Screenshot sync application with SFTP support, and web dashboard."
repository = "https://github.com/verknowsys/Small"
license = "MIT"

[[bin]]
name = "small"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# File watching
notify = "6.1"

# SSH/SFTP
ssh2 = "0.9"

# Web server
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled", "backup"] }

# UUID
uuid = { version = "1.18", features = ["v3", "v4"] }

# Time
chrono = "0.4"

# Logging
tracing = { version = "0.1.41", features = ["log", "attributes", "std"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "fmt", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Utils
regex = "1.12"
home = "0.5"
clippers = "0.1.2"
