[package]
name = "small-bin"
version = "1.0.3"
edition = "2024"
rust-version = "1.90"
authors = ["Daniel Dettlaff <dmilith@me.com>"]
description = "Sync'eM ALL - File/ Screenshot sync application with SFTP support, and web dashboard."
repository = "https://github.com/verknowsys/Small"
license = "MIT"

[[bin]]
name = "small"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# File watching
notify = "8.2"

# SSH/SFTP
ssh2 = "0.9"

# Web server
warp = { version = "0.4", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.37", features = ["bundled", "backup", "modern_sqlite"] }

# UUID
uuid = { version = "1.18", features = ["v3", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { version = "0.1.41", features = ["log", "attributes", "std"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "fmt", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
toml = "0.9"

# Utils
regex = "1.12"
home = "0.5"
clippers = "0.1.2"
lazy_static = "1.5.0"
